--- a/pages/youandme/youandme.scss
+++ b/pages/youandme/youandme.scss
@@ -72,6 +72,9 @@
           padding: 50px;
         }
       }
+      .private-post-list{
+        overflow-x: auto;
+      }
 
       .heart-input {
         box-shadow: none;
