--- a/styles/index.scss
+++ b/styles/index.scss
@@ -8,6 +8,7 @@ html{
   color: #333;
   margin: 0;
   min-height: 100vh;
+  overflow-x: hidden;
   &::-webkit-scrollbar {
     width: 0.5em;
     background-color: #394041;
