--- a/styles/index.scss
+++ b/styles/index.scss
@@ -8,6 +8,7 @@ html{
   color: #333;
   margin: 0;
   min-height: 100vh;
+  transition: background-color 0.5s ease, color 0.5s ease;
   overflow-x: hidden;
   &::-webkit-scrollbar {
     width: 0.5em;
