--- a/components/Header/Hamburger/Hamburger.scss
+++ b/components/Header/Hamburger/Hamburger.scss
@@ -3,7 +3,7 @@ $blue-color: #00ffe5;
 .dropdown-mobile-submenu {
   font-weight: 300;
   text-transform: none;
-  right: 3%;
+  right: -9px;
   opacity: 0;
   position: absolute;
   width: 100px;
@@ -42,12 +42,12 @@ $blue-color: #00ffe5;
     opacity: 0;
   }
   80%{
-    transform: translateY(500px);
+    transform: translateY(450px);
     opacity: 1;
 
   }
   100%{
-    transform: translateY(460px);
+    transform: translateY(430px);
     opacity: 1;
 
   }
