--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -12,7 +12,7 @@ $blue-color: #88b7ff;
     padding: 5px;
     background-color: transparent;
     transition: all 0.5s ease-in;
-    font-family: "Sriracha", "Helvetica", "Arial", cursive;
+    font-family: "Sen", "Helvetica", "Arial", cursive;
     font-size: large;
     text-transform: capitalize;
     
