--- a/pages/youandme/youandme.scss
+++ b/pages/youandme/youandme.scss
@@ -5,7 +5,7 @@
   background-attachment: scroll;
   background-size: cover;
   background-position: center;
-  font-family: "Poppins", "Helvetica", "Arial", sans-serif;
+  font-family: "Sen", "Helvetica", "Arial", sans-serif;
   display: flex;
   justify-content: center;
 
