--- a/components/Jumbo/Jumbo.scss
+++ b/components/Jumbo/Jumbo.scss
@@ -1,12 +1,12 @@
 .jumbo-section {
-  font-family: "Sriracha",  "Helvetica", "Arial",cursive;
+  font-family: "Sen",  "Helvetica", "Arial",cursive;
   position: relative;
   #logo {
     margin-right: auto;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 3;
+    z-index: 5;
     // @media screen and (max-width: 415px) {
     //   width: 90%;
     // }
