--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,10 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins|Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Gotu&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Sen&display=swap');
 html{
  body {
-  font-family: "Poppins", "Helvetica", "Arial", sans-serif;
+  font-family: "Sen", "Helvetica", "Arial", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
   font-display: swap;
+  font-weight: 600;
   color: #333;
   margin: 0;
   min-height: 100vh;
