--- a/components/Auth/login.scss
+++ b/components/Auth/login.scss
@@ -17,7 +17,8 @@ body {
   }
 }
 .signup-container {
-  font-family: "Poppins", sans-serif;
+  font-family: "Sen","Helvetica","Arial", sans-serif;
+  font-weight: normal;
   position: fixed;
   width: 40%;
   top: 10%;
@@ -69,7 +70,8 @@ body {
   }
 }
 .login-container {
-  font-family: "Poppins", sans-serif;
+  font-family: "Sen","Helvetica","Arial", sans-serif;
+  font-weight: normal;
   position: fixed;
   width: 40%;
   top: 10%;
