--- a/pages/blogs/Blog.scss
+++ b/pages/blogs/Blog.scss
@@ -8,12 +8,12 @@
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: scroll;
-  font-family: "Gotu","Arial","Arial", sans-serif;
+  font-family: "Gotu","Helvetica","Arial", sans-serif;
 }
 .shrinked {
   height: 70px;
   display: flex;
-  transition: 0.2s;
+  transition: display 0.3s ease,visibility 0.3s ease;
   overflow: hidden;
   position: fixed;
   top: 0;
@@ -32,7 +32,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    transition: background 400ms;
+    transition: background 400ms ease;
   }
   &.fixme {
     &:before {
