--- a/components/Jumbo/Jumbo.scss
+++ b/components/Jumbo/Jumbo.scss
@@ -7,18 +7,10 @@
     top: 0;
     left: 0;
     z-index: 5;
-    // @media screen and (max-width: 415px) {
-    //   width: 90%;
-    // }
-    // @media screen and (min-width: 415px) and (max-width: 768px) {
-    //   width: 80%;
-    // }
-    // @media screen and (min-width: 992px) {
-    //   width: 85%;
-    // }
-    // @media screen and (min-width: 768px) and (max-width: 992px) {
-    //   width: 85%;
-    // }
+
+    @media screen and (max-width: 415px) {
+      display: none;
+    }
   }
   .background-video {
     @media screen and (min-width: 320px) and(max-width:415px) {
