--- a/pages/blogs/Blog.scss
+++ b/pages/blogs/Blog.scss
@@ -8,7 +8,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: scroll;
-  font-family: "Gotu","Helvetica","Arial", sans-serif;
+  font-family: "Sen","Helvetica","Arial", sans-serif;
 }
 .shrinked {
   height: 70px;
