--- a/styles/index.scss
+++ b/styles/index.scss
@@ -50,3 +50,13 @@ html{
 }
 
 }
+.web-service-entrance{
+  text-align: center;
+  background-color: rgb(67, 120, 255);
+  color: white;
+  padding: 2px;
+  position: absolute;
+  top: 0;
+  z-index: 3;
+  width: 100%;
+}
